fixed product tab on mobile

--- a/src/Styles/CartPage.css
+++ b/src/Styles/CartPage.css
@@ -137,6 +137,13 @@
   font-weight: 500;
 }
 
+.cart-product-row-div {
+  border-radius: 30px;
+  padding: 30px 30px 30px 30px;
+  box-shadow: 0px 0px 4px rgb(207, 207, 207);
+  margin-bottom: 10px;
+}
+
 @media (min-width: 769px) and (max-width: 1250px) {
   .remove-from-cart-button {
     background-image: url(../../public/images/trash.svg);
@@ -175,8 +182,10 @@
     align-items: start;
     justify-content: center;
     border-bottom: none;
-    width: 80vw;
+    width: 40vw;
     margin-bottom: 10px;
+    height: fit-content;
+    padding: 10px 10px 10px 10px;
   }
 
   .cart-product {
@@ -195,9 +204,6 @@
     width: auto;
   }
 
-  .cart-product-row-div {
-    height: 100px;
-  }
   .cart-product-name-quantity-size-container {
     display: flex;
     flex-direction: column;
@@ -281,6 +287,7 @@
     border-bottom: none;
     width: 80vw;
     margin-bottom: 10px;
+    padding: 10px 10px 10px 10px;
   }
 
   .cart-product {
@@ -288,8 +295,7 @@
   }
 
   .cart-product-image {
-    width: 100px;
-    height: 140px;
+    width: 80px;
   }
   .cart-product-price,
   .cart-product-quantity,
@@ -307,8 +313,7 @@
     font-size: 0.6rem;
   }
   .cart-product-row-div {
-    height: 100px;
-    width: 100vw;
+    height: fit-content;
   }
   .cart-product-name-quantity-size-container {
     display: flex;
