--- a/src/Styles/ProductTab.css
+++ b/src/Styles/ProductTab.css
@@ -91,8 +91,4 @@
   .product-tab-sizes {
     font-size: 0.6rem;
   }
-  .product-tab-container {
-    width: 42vw;
-    height: 60vw;
-  }
 }
